[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/TooltipFactory.gd" type="Script" id=1]
[ext_resource path="res://resources/tooltip_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/TooltipPuppet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TooltipEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/little_theme.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Fighter"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Image/Puppets/TooltipPuppet:heroType")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image/Puppets/TooltipPuppet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image/Puppets/TooltipPuppet:pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Image/Effects/TooltipEffect:pos")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Image/Effects/TooltipEffect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Paladin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Image/Puppets/TooltipPuppet:heroType")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image/Puppets/TooltipPuppet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image/Puppets/TooltipPuppet:pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Image/Effects/TooltipEffect:pos")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Image/Effects/TooltipEffect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 5 ) ]
}

[node name="TooltipFactory" type="Node2D"]
script = ExtResource( 1 )
type = 1
size = Vector2( 3, 5 )

[node name="Image" type="Node2D" parent="."]
position = Vector2( -13.5, -13.5 )

[node name="Board" type="TileMap" parent="Image"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 1, 2, 1, 2, 65536, 1, 0, 65537, 1, 0, 65538, 1, 3, 131072, 1, 3, 131073, 1, 2, 131074, 1, 0, 196608, 1, 0, 196609, 1, 1, 196610, 1, 2, 262144, 1, 0, 262145, 1, 3, 262146, 1, 0 )

[node name="Shadow" type="TileMap" parent="Image"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65538, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65538, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65538, 262144, 0, 131072, 262145, 0, 131073, 262146, 0, 131074 )

[node name="Puppets" type="Node2D" parent="Image"]

[node name="TooltipPuppet" parent="Image/Puppets" instance=ExtResource( 3 )]
position = Vector2( 9, 9 )
category = 0
heroType = 2
pos = Vector2( 1, 1 )

[node name="TooltipPuppet2" parent="Image/Puppets" instance=ExtResource( 3 )]
visible = false

[node name="TooltipPuppet3" parent="Image/Puppets" instance=ExtResource( 3 )]
visible = false

[node name="TooltipPuppet4" parent="Image/Puppets" instance=ExtResource( 3 )]
visible = false

[node name="TooltipPuppet5" parent="Image/Puppets" instance=ExtResource( 3 )]
visible = false

[node name="Effects" type="Node2D" parent="Image"]

[node name="TooltipEffect" parent="Image/Effects" instance=ExtResource( 4 )]
position = Vector2( 9, 0 )
pos = Vector2( 1, 0 )

[node name="TooltipEffect2" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect3" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect4" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect5" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect6" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect7" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="TooltipEffect8" parent="Image/Effects" instance=ExtResource( 4 )]

[node name="Labels" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -13.5 )
scale = Vector2( 0.5, 0.5 )

[node name="TopLabel" type="Label" parent="Labels"]
margin_left = -60.0
margin_top = -5.0
margin_right = 60.0
margin_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 5 )
text = "The paladin hits all cells around him.qsd qsd qsd qsdqsdqsd qsd qsd qsd"
align = 1
valign = 2
autowrap = true

[node name="BotLabel" type="Label" parent="Labels"]
margin_left = -60.0
margin_top = 95.0
margin_right = 60.0
margin_bottom = 68.0
grow_horizontal = 2
theme = ExtResource( 5 )
text = "The paladin cannot die from any attack.qsd qs dqsd qsd qsd qsd qsd"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fighter = SubResource( 1 )
anims/Paladin = SubResource( 3 )
anims/RESET = SubResource( 2 )
